[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 15
size_flags_vertical = 15
size_flags_stretch_ratio = 10.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.698039 )
margin_left = -362.0
margin_top = -153.0
margin_right = 1381.0
margin_bottom = 761.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1027.0
margin_bottom = 604.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 481.0
margin_top = 268.0
margin_right = 545.0
margin_bottom = 336.0

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
text = "Resume"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
text = "Settings"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
text = "Restart"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 64.0
margin_bottom = 68.0
text = "Exit"
[connection signal="button_down" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_button_down"]
